# gloseen

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  task_architecture_diagram.md  task_esp32_setup.md  task_translation.md
arduino_code/blindur/: blindur.ino
codigo_arduino/: teste_camera_com_wifi.ino
templates/: index.html  memory.html
